--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="calculator">
+        <h2>Loan Calculator</h2>
+        <form>
+            <label>Laon Amount: $</label>
+            <input type="number" id="amount" min="1" max="5000000" onchange="calculateLoan()"/>
+            <label>Interest Rate: %</label>
+            <input type="number" id="interest" min="0" max="100" value="10" step=".1" onchange="calculateLoan()"/>
+            <label>Months To Pay: </label>
+            <input type="number" id="months" min="1" max="300" value="1" step="1" onchange="calculateLoan()"/>
+        </form>
+    </div>
     <script src="loanCal.js"></script>
 </body>
 </html>
