--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <input type="number" id="months" min="1" max="300" value="1" step="1" onchange="calculateLoan()"/>
             </div>
         </form>
+        <h2 id="payment"></h2>
     </div>
     <script src="loanCal.js"></script>
 </body>
